Bug 56445 - avr.c:11551:16: error: invoking macro FX_FTYPE_FX ar gument 1: empty macro arguments are undefined
Summary: avr.c:11551:16: error: invoking macro FX_FTYPE_FX ar gument 1: empty macro ar...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.8.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks: enable-werror-always
  Show dependency treegraph
 
Reported: 2013-02-25 15:13 UTC by Jorn Wolfgang Rennecke
Modified: 2013-02-28 09:19 UTC (History)
4 users (show)

See Also:
Host:
Target: avr-elf, avr-rtems
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jorn Wolfgang Rennecke 2013-02-25 15:13:16 UTC
g++ -c   -g -O2 -DIN_GCC -DCROSS_DIRECTORY_STRUCTURE  -fno-exceptions -fno-rtti -fasynchronous-unwind-tables -W -Wall -Wno-narrowing -Wwrite-strings -Wcast-qual -Wmissing-format-attribute -pedantic -Wno-long-long -Wno-variadic-macros -Wno-overlength-strings -Werror -fno-common  -DHAVE_CONFIG_H -I. -I. -I../../../gcc/gcc -I../../../gcc/gcc/. -I../../../gcc/gcc/../include -I../../../gcc/gcc/../libcpp/include  -I../../../gcc/gcc/../libdecnumber -I../../../gcc/gcc/../libdecnumber/dpd -I../libdecnumber -I../../../gcc/gcc/../libbacktrace    \
        ../../../gcc/gcc/config/avr/avr.c -o avr.o
../../../gcc/gcc/config/avr/avr.c:11551:16: error: invoking macro FX_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
   FX_FTYPE_FX ();
                ^
../../../gcc/gcc/config/avr/avr.c:11551:16: error: invoking macro FX_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11551:16: error: invoking macro FX_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11551:16: error: invoking macro FX_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11551:16: error: invoking macro FX_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11551:16: error: invoking macro FX_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11551:16: error: invoking macro FX_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11551:16: error: invoking macro FX_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11558:20: error: invoking macro FX_FTYPE_FX_INT argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
   FX_FTYPE_FX_INT ();
                    ^
../../../gcc/gcc/config/avr/avr.c:11558:20: error: invoking macro FX_FTYPE_FX_INT argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11558:20: error: invoking macro FX_FTYPE_FX_INT argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11558:20: error: invoking macro FX_FTYPE_FX_INT argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11558:20: error: invoking macro FX_FTYPE_FX_INT argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11558:20: error: invoking macro FX_FTYPE_FX_INT argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11558:20: error: invoking macro FX_FTYPE_FX_INT argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11558:20: error: invoking macro FX_FTYPE_FX_INT argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11570:17: error: invoking macro INT_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
   INT_FTYPE_FX ();
                 ^
../../../gcc/gcc/config/avr/avr.c:11570:17: error: invoking macro INT_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11570:17: error: invoking macro INT_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11570:17: error: invoking macro INT_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11582:18: error: invoking macro INTX_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
   INTX_FTYPE_FX ();
                  ^
../../../gcc/gcc/config/avr/avr.c:11582:18: error: invoking macro INTX_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11582:18: error: invoking macro INTX_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11582:18: error: invoking macro INTX_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11582:18: error: invoking macro INTX_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11582:18: error: invoking macro INTX_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11582:18: error: invoking macro INTX_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11582:18: error: invoking macro INTX_FTYPE_FX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11594:18: error: invoking macro FX_FTYPE_INTX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
   FX_FTYPE_INTX ();
                  ^
../../../gcc/gcc/config/avr/avr.c:11594:18: error: invoking macro FX_FTYPE_INTX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11594:18: error: invoking macro FX_FTYPE_INTX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11594:18: error: invoking macro FX_FTYPE_INTX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11594:18: error: invoking macro FX_FTYPE_INTX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11594:18: error: invoking macro FX_FTYPE_INTX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11594:18: error: invoking macro FX_FTYPE_INTX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
../../../gcc/gcc/config/avr/avr.c:11594:18: error: invoking macro FX_FTYPE_INTX argument 1: empty macro arguments are undefined in ISO C90 and ISO C++98 [-Werror]
cc1plus: all warnings being treated as errors
make[2]: *** [avr.o] Error 1
Comment 1 Georg-Johann Lay 2013-02-28 09:16:15 UTC
Author: gjl
Date: Thu Feb 28 09:16:08 2013
New Revision: 196332

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=196332
Log:
	PR target/56445
	* config/avr/avr.c (avr_init_builtins): Use 'n' instead of empty
	macro parameters with: FX_FTYPE_FX, FX_FTYPE_FX_INT, INT_FTYPE_FX,
	INTX_FTYPE_FX, FX_FTYPE_INTX.
	* config/avr/builtins.def: Adjust respective DEF_BUILTIN.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/avr/avr.c
    trunk/gcc/config/avr/builtins.def
Comment 2 Georg-Johann Lay 2013-02-28 09:19:29 UTC
Fixed